# QrScannerInterface

./: .gitignore.txt  CMakeLists.txt  OpenCVTest.sln  README.md  RedisConnector.cpp  RedisConnector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
OpenCVTest/: OpenCVTest.cpp  OpenCVTest.vcxproj  OpenCVTest.vcxproj.filters
